--- a/Main.ipynb
+++ b/Main.ipynb
@@ -248,10 +248,10 @@
     "\n",
     "\n",
     "hist = model.fit([train_data_1, train_data_2, leaks], train_labels,\n",
-    "                 # validation_data=({
-                                      'input_1': test_data_1, 
-                                      'input_2': test_texts_2, 
-                                      'input_3': test_leaks}, test_labels),\n",
+    "                 # validation_data=({\n",
+                      #                'input_1': test_data_1,\n",
+                      #                'input_2': test_texts_2,\n",
+                      #                'input_3': test_leaks}, test_labels),\n",
     "                 validation_split=0.1,\n",
     "                 epochs=50, batch_size=512, shuffle=True,\n",
     "                 class_weight=class_weight, callbacks=[early_stopping, model_checkpoint])\n",
